# Agent_State_of_the_art_test

./: Agent.md  README.md  activate.bat  main.py  pyproject.toml
a2a__multi_agent/: Makefile
a2a__multi_agent/agents/greeting_agent/: agent.py
a2a__multi_agent/agents/time_agent/: agent.py
a2a__multi_agent/client/: client.py
a2a__multi_agent/models/: agent.py  request.py  task.py
a2a__multi_agent/utilities/: discovery.py
a2a__pydantic_ai/: agent_registry.json
a2a_framework_agnostic/: README.md
a2a_framework_agnostic/agents/langgraph_agent/: agent_executor.py
a2a_framework_agnostic/client/: client.py  registry.py
a2a_langgraph/: Makefile  activate.bat  debug_result.py  pyproject.toml  requirements.txt  test_pydantic.py
a2a_langgraph/agents/langgraph_agent/: __main__.py
a2a_langgraph/agents/pydantic_agent/: __main__.py  agent_executor.py
a2a_langgraph/client/: client.py  orchestrator.py  orchestrator_clean.py  orchestrator_old.py  prompt.py  simple_orchestrator.py
a2a_scraper/: Makefile  requirements.txt
a2a_scraper/agents/langgraph_agent/: __main__.py  agent.py  agent_executor.py
a2a_scraper/agents/pydantic_agent/: agent.ipynb  agent.py  (+1 more)
a2a_scraper/client/: agent_registry.json
a2a_search/: Makefile  docker-compose.yml  requirements.txt  test_mcp_connection.py
a2a_search/client/: __main__.py
scientific_parser/: Makefile  README.md  demo.py  requirements.txt  test.ipynb
scientific_parser/a2a/: __init__.py
scientific_parser/agents/: requirements.txt
scientific_parser/parsed_papers/: histopathology_and_ai_20251013_101807.json
(+40 files in other folders)
